--- a/Job Portal System/Areas/Announcements/Pages/Details.cshtml
+++ b/Job Portal System/Areas/Announcements/Pages/Details.cshtml
@@ -35,6 +35,5 @@
 
 @section Scripts {
     <partial name="_EditorScriptPartial" />
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="~/js/marker.js"></script>
+    <partial name="_MarkerScriptsPartial"/>
 }
