--- a/Job Portal System/Areas/Identity/Pages/Account/Recruiter/Register.cshtml
+++ b/Job Portal System/Areas/Identity/Pages/Account/Recruiter/Register.cshtml
@@ -90,11 +90,10 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Input.CompanyName"></label>
-                        <input asp-for="Input.CompanyName" id="company-name" class="form-control" />
-                        <span asp-validation-for="Input.CompanyName" class="text-danger"></span>
+                        <label asp-for="Input.Company"></label>
+                        <input asp-for="Input.Company" id="company-name" class="form-control" />
+                        <span asp-validation-for="Input.Company" class="text-danger"></span>
                     </div>
-                    <input asp-for="Input.CompanyId" id="company-id" />
                     <div class="form-group">
                         <label asp-for="Input.Password"></label>
                         <input asp-for="Input.Password" class="form-control" />
