--- a/Job Portal System/Areas/JobVacancies/Pages/Details.cshtml
+++ b/Job Portal System/Areas/JobVacancies/Pages/Details.cshtml
@@ -57,12 +57,10 @@
                     </dl>
                     @if (!string.IsNullOrEmpty(Model.JobVacancy.Description))
                     {
-                    <div class="mt-3">
-                        <span class="d-block font-weight-little-bold">Description:</span>
-                        <div class="mt-2">
-                            @Html.Raw(Model.JobVacancy.Description)
+                        <div class="marker mt-3">
+                            <div class="content d-none">@Model.JobVacancy.Description</div>
+                            <div class="view"></div>
                         </div>
-                    </div>
                     }
                 </fieldset>
                 <hr />
