--- a/Job Portal System/wwwroot/css/site.css
+++ b/Job Portal System/wwwroot/css/site.css
@@ -509,11 +509,11 @@ a.no-hover-anchor:hover {
     height: 100%;
     border: 4px solid white;
     border-radius: 3px;
-    background-color: #0000002e;
+    background-color: rgba(0, 0, 46, 0);
 }
 
 .loader {
-    border: 5px solid #ffffff5e;
+    border: 5px solid rgba(255, 255, 94, 1);
     -webkit-animation: spin 1s linear infinite;
     animation: spin 1s linear infinite;
     border-top: 5px solid #555;
